# godb

./: .gitignore  Makefile  README.md  generator.mk  goenv  libs.mk  tests.mk
mk/: clib.mk  generator.mk  golib.mk  libs.mk  tests.mk
scripts/: init_db.sh
src/: Makefile
src/generator/: dbgen.go
src/generator/ddl/: ddl.go  ddl_test.go  generics.go  mysql.go  postgre.go
src/generator/dml/: c.go  dml.go  dml_test.go  golang.go
src/generator/layout/: column.go  database.go  keys.go  layout.go  layout_test.go  layouter.go  mysql.go  postgre.go  table.go  testlayouts.go
static/c/: Makefile  Makefile.bak  configure.ac  settings.mk  tests.mk
static/c/include/: aggregate.h  column.h  db.h  dbhandle.h  dbhandle_impl.h  dbifuncs.h  dbihelper.h  dbihooks.h  dbitypes.h  dblimits.h  dbtypes.h  golanghelper.h  helper.h  hooks.h  join.h  keys.h  logger.h  mysqlbind.h  mysqlfuncs.h  mysqlhelper.h  mysqlhooks.h  order.h  postgresbind.h  postgresfuncs.h  postgreshelper.h  postgreshooks.h  selectresult.h  statements.h  stringbuf.h  table.h  values.h  where.h
static/c/src/: Makefile.am  column.c  db.c  dbifuncs.c  dbihelper.c  dbihooks.c  dbtypes.c  golanghelper.c  helper.c  join.c  logger.c  mysqlbind.c  mysqlfuncs.c  mysqlhelper.c  mysqlhooks.c  postgresbind.c  postgresfuncs.c  postgreshelper.c  postgreshooks.c  selectresult.c  statements.c  stringbuf.c  table.c  test.c  values.c  where.c
static/golang/: Makefile
static/golang/src/godb/: column.go  config.go  credentials.go  dbconfig.go  dbcredentials.go  dbhandle.go  dbtable.go  deletestmt.go  godb.go  godb_test.go  handle.go  insertstmt.go  logger.go  row.go  selectresult.go  selectstmt.go  statements.go  table.go  tabledef.go  updatestmt.go  upsertstmt.go  where.go  whereclause.go  wherecomposite.go  wherecondition.go
tmpl/c/: columntypes.h.tmpl  names.h.tmpl  table.c.tmpl  table.h.tmpl  tables.c.tmpl  tables.h.tmpl  tests.c.tmpl  tests.h.tmpl
tmpl/golang/src/godb/: tableinterfaces.go.tmpl  tables.go.tmpl
tmpl/sql/: 01_databases.sql.tmpl  02_tables.sql.tmpl  03_indexes.sql.tmpl  04_foreignkeys.sql.tmpl
